@@ -472,6 +472,9 @@ Trunk (unreleased changes)
     HADOOP-4078. Create test files for TestKosmosFileSystem in separate
     directory under test.build.data. (lohit)
 
+    HADOOP-3968. Fix getFileBlockLocations calls to use FileStatus instead
+    of Path reflecting the new API. (Pete Wyckoff via lohit)
+
 Release 0.18.1 - Unreleased
 
   BUG FIXES
